# terminalTelegram

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
termainaltelegram/: cli.py  controller.py  io.py  models.py  service.py  ui.py
tests/: test_controller.py  test_ui.py
